--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="../public/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../public/css/membereditor.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/membereditor.css">
     <title>會員修改頁面</title>
 </head>
 
@@ -17,7 +17,7 @@
             <div class="col-lg-4" id="about">
                 <div class="row justify-content-center align-items-center" id="people">
                     <div class="text-center">
-                        <img src="../public/images/profile.jpg" class="rounded-circle my-3" id="photo">
+                        <img src="images/profile.jpg" class="rounded-circle my-3" id="photo">
                         <p class="text-light">使用者暱稱</p>
                         <td><input type="text" placeholder="暱稱">
                     </div>
@@ -87,7 +87,7 @@
 
                     <!--<div class="row">-->
                         <div class="col-sm my-2">
-                            <img src="../public/images/01-banner.jpg" class="img-fluid">
+                            <img src="images/01-banner.jpg" class="img-fluid">
                         </div>
                         <div class="col-sm my-2">
                             <img src="" class="img-fluid">
