--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -44,10 +44,10 @@
                     <ul class="navigation">
                        <!-- <li><a href="#top"><i class="fa fa-home"></i>會員資料</a></li>-->
                         <li><a href="#about"><i class="fa fa-user"></i>會員資料</a></li>
-                        <li><a href=""><i class="fa fa-pencil"></i>編輯會員</a></li>
+                        <li><a href="membereditor" role="button"><i class="fa fa-pencil"></i>編輯會員</a></li>
                         <li><a href="#projects"><i class="fa fa-newspaper-o"></i>我的收藏</a></li>
                         <li><a href="#contact"><i class="fa fa-envelope"></i>回報問題</a></li>
-                        <li><a href="home"><i class="fa fa-home"></i>回主頁</a></li>
+                        <li><a href="index"><i class="fa fa-home"></i>回主頁</a></li>
                         <li><a href="logout"><i class="fa fa-sign-out"></i>登出</a></li>
                     </ul>
                 </div>
@@ -66,10 +66,10 @@
             <div class="main-navigation">
                 <ul class="navigation">
                     <li><a href="#about"><i class="fa fa-user"></i>會員資料</a></li>
-                    <li><a href=""><i class="fa fa-pencil"></i>編輯會員</a></li>
+                    <li><a href="membereditor"><i class="fa fa-pencil"></i>編輯會員</a></li>
                     <li><a href="#projects"><i class="fa fa-bookmark"></i>我的收藏</a></li>
                     <li><a href="#contact"><i class="fa fa-wrench"></i>問題回報</a></li>
-                    <li><a href="home"><i class="fa fa-home"></i>回主頁</a></li>
+                    <li><a href="index"><i class="fa fa-home"></i>回主頁</a></li>
                     <li><a href="logout"><i class="fa fa-sign-out"></i>登出</a></li>
                 </ul>
             </div> <!-- .main-navigation -->
