--- a/views/recognition.ejs
+++ b/views/recognition.ejs
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="../public/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="../public/css/recognition.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/recognition.css" />
     <title>圖像辨識</title>
   </head>
 
@@ -102,6 +102,6 @@
       Copyrights © 2021 All Rights Reserved
     </footer>-->
     <!-- Optional JavaScript -->
-    <script src="../public/js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
