recognition導覽列更新

--- a/views/recognition.ejs
+++ b/views/recognition.ejs
@@ -10,6 +10,45 @@
     <title>圖像辨識</title>
   </head>
 
+  <header>
+    <nav class="navbar navbar-light bg-light ps-4">
+        <span class="navbar-brand mb-0 h1">邦妮幫你v0.01</span>
+    </nav>
+</header>
+
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="/">Bunny幫你</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">首頁</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about">關於我們</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="product">實驗動物認養</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <br>
+
   <body>
     <header class="container">
       <img
@@ -28,7 +67,7 @@
             </div>
         </div>
     </div> -->
-    
+
     <!--主按鈕-->
     <div class="row g-0 text-light justify-content-center align-items-center">
       <div class="col-lg-6 text-center">
@@ -43,7 +82,7 @@
               </li>
           </ul>
       </li> 
-        
+      <br>
 
    <!-- </header>
     <div class="container mt-5">
