--- a/public/css/membereditor.css
+++ b/public/css/membereditor.css
@@ -11,8 +11,39 @@ body {
     height: 100vh;
 }
 
-#photo {
-    height: 20vh;
+.sidebar-menu {
+    float: left;
+    width: 23%;
+    height: 100%;
+    position: fixed;
+    background-color: #5f6d7e;
+    color: white;
+    overflow-y: hidden;
+  }
+  
+  
+  .top-section {
+    padding: 40px;
+  }
+.profile-image {
+    width: 150px;
+    height: 150px;
+    border: 4px solid white;
+    -webkit-border-radius: 75px;
+    border-radius: 75px;
+    overflow: hidden;
+    margin-bottom: 20px;
+  }
+  .profile-image img {
+    position: relative;
+    width: 150%;
+    background-position: center center;
+    background-size: cover;
+    
+  }
+  
+.main{
+    padding-left: 30%;
 }
 
 #people {
