--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -66,7 +66,7 @@
         <div class="sidebar-menu hidden-xs hidden-sm">
             <div class="top-section">
                 <div class="profile-image">
-                    <img src=<%= item.m_pic %> alt="陳筱君">
+                    <img src=<%= item.m_pic %> alt="會員頭貼">
                 </div>
                 <h3 class="profile-title"><%= item.m_nickname %></h3>
                 <p class="profile-description">已登記成為實驗動物領養等待名單</p>
