ul改成form input file

--- a/views/recognition.ejs
+++ b/views/recognition.ejs
@@ -71,7 +71,10 @@
     <!--主按鈕-->
     <div class="row g-0 text-light justify-content-center align-items-center">
       <div class="col-lg-6 text-center">
-    <ul class="drop-down-menu">
+        <form>
+          <input type="file" name="pic_file" required="required">
+        </form>
+    <!--<ul class="drop-down-menu">
       <li><a href="#">開始上傳</a> 
           <ul>
               <li><a href="#">照片圖庫</a>
@@ -81,7 +84,7 @@
               <li><a href="#">選擇檔案</a>
               </li>
           </ul>
-      </li> 
+      </li> -->
       <br>
 
    <!-- </header>
