--- a/views/recognition.ejs
+++ b/views/recognition.ejs
@@ -72,7 +72,7 @@
     <div class="row g-0 text-light justify-content-center align-items-center">
       <div class="col-lg-6 text-center">
         <form>
-          <input type="file" name="pic_file" required="required">
+          <input type="file" name="pic_file" accept="image/jpeg, image/png" required="required">
         </form>
     <!--<ul class="drop-down-menu">
       <li><a href="#">開始上傳</a> 
